k8s/gcp/gateway-infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-infra
  labels:
    goldilocks.fairwinds.com/enabled: "true"
